# avalanche-rs

./: .bazelrc  .editorconfig  .envrc  .gitignore  .taplo.toml  .yamlfmt  AGENTS.md  BUILD.bazel  CLAUDE.md  Cargo.toml  LICENSE  MODULE.bazel  README.md  Taskfile.yml  clippy.toml  deny.toml  flake.nix  header.yml  justfile  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
crates/ava-api/: BUILD.bazel  Cargo.toml
crates/ava-api-macros/: BUILD.bazel  Cargo.toml
crates/ava-api-macros/src/: lib.rs
crates/ava-api/src/: error.rs  header_route.rs  jsonrpc.rs  lib.rs  middleware.rs  register.rs  server.rs
crates/ava-api/src/admin/: mod.rs  profiler.rs  types.rs
crates/ava-api/src/health/: handler.rs  mod.rs  types.rs
crates/ava-api/src/info/: mod.rs  types.rs
crates/ava-api/src/metrics/: mod.rs
crates/ava-api/tests/: PORTING.md  differential_api_parity.rs  golden_metrics_names.rs
crates/ava-api/tests/go-oracle/: api_parity_oracle_test.go  metrics_schema_oracle_test.go
crates/ava-archivedb/: BUILD.bazel  Cargo.toml
crates/ava-archivedb/src/: lib.rs  value.rs
crates/ava-archivedb/tests/: PORTING.md  golden_encoding.rs  versioned.rs
crates/ava-avm/: BUILD.bazel  Cargo.toml
crates/ava-avm/benches/: mempool_push_pop.rs
crates/ava-avm/fuzz/: BUILD.bazel  Cargo.toml
crates/ava-avm/fuzz/fuzz_targets/: decode_block.rs
crates/ava-avm/src/: config.rs  error.rs  factory.rs  fx_index.rs  genesis.rs  jsonrpc.rs  lib.rs  mempool.rs  service.rs  stop_vertex.rs  vm.rs
crates/ava-avm/src/block/: builder.rs  executor.rs  mod.rs  parser.rs  standard_block.rs
crates/ava-avm/src/fx/: dispatch.rs  mod.rs  secp.rs
crates/ava-avm/src/network/: atomic.rs  gossip.rs  mod.rs  tx_verifier.rs
crates/ava-avm/src/nftfx/: fx.rs  mod.rs  types.rs
crates/ava-avm/src/propertyfx/: fx.rs  mod.rs  types.rs
crates/ava-avm/src/state/: chain.rs  diff.rs  init.rs  mod.rs  state.rs  versions.rs
crates/ava-avm/src/txs/: base_tx.rs  codec.rs  components.rs  create_asset.rs  credential.rs  export.rs  import.rs  initial_state.rs  mod.rs  operation.rs  operation_tx.rs  tx.rs
crates/ava-avm/src/vm/: dyndb.rs
crates/ava-avm/tests/: PORTING.md  atomic_xp.rs  block_lifecycle.rs  builder.rs  clock_injection.rs  error_variants.rs  executor.rs  fx_dispatch.rs  fx_secp.rs  genesis_differential.rs  genesis_init.rs  genesis_parse.rs  golden_block_hash.rs  golden_tx_codec.rs  golden_x_genesis_block.rs  gossip.rs  nftfx_types.rs  nftfx_verify.rs  propertyfx_types.rs  propertyfx_verify.rs  semantic.rs  state_init.rs  state_utxo.rs  syntactic.rs  tx_types.rs  tx_utxos.rs  vm_conformance.rs
crates/ava-blockdb/: BUILD.bazel  Cargo.toml
crates/ava-blockdb/src/: config.rs  data.rs  error.rs  format.rs  index.rs  lib.rs  recovery.rs  store.rs
crates/ava-blockdb/tests/: PORTING.md  golden_format.rs  prop_roundtrip.rs  recovery.rs
crates/ava-chains/: BUILD.bazel  Cargo.toml
crates/ava-chains/src/: aliaser.rs  create_chain.rs  error.rs  lib.rs  manager.rs  registry.rs  subnet.rs
crates/ava-chains/src/atomic/: mod.rs  shared_memory.rs
crates/ava-chains/tests/: PORTING.md  differential_testvm.proptest-regressions  differential_testvm.rs  manager.rs  pipeline.rs
crates/ava-chains/tests/support/: mod.rs
crates/ava-codec/: BUILD.bazel  Cargo.toml
crates/ava-codec-derive/: BUILD.bazel  Cargo.toml
crates/ava-codec-derive/src/: lib.rs
crates/ava-codec/benches/: codec.rs
crates/ava-codec/fuzz/: Cargo.toml
crates/ava-codec/fuzz/fuzz_targets/: codec_roundtrip.rs
crates/ava-codec/proptest-regressions/: .gitkeep
crates/ava-codec/src/: codectest.rs  error.rs  ids.rs  lib.rs  linearcodec.rs  manager.rs  packer.rs
crates/ava-codec/tests/: PORTING.md  conformance.rs  derive.rs  golden_codec.rs  packer.rs  proptests.rs
crates/ava-config/: BUILD.bazel  Cargo.toml
crates/ava-config/src/: chain_config.rs  defaults.rs  duration.rs  error.rs  flags.rs  keys.rs  lib.rs  node.rs  parse.rs  precedence.rs  subnets.rs
crates/ava-config/tests/: PORTING.md  golden_flag_parity.rs  prop_config_precedence.rs
crates/ava-crypto/: BUILD.bazel  Cargo.toml
crates/ava-crypto/benches/: signature.rs
crates/ava-crypto/src/: address.rs  cb58.rs  error.rs  formatting.rs  hashing.rs  lib.rs  secp256k1.rs
crates/ava-crypto/src/bls/: ciphersuite.rs  keys.rs  local_signer.rs  mod.rs  sign.rs  signer.rs
crates/ava-crypto/src/staking/: certificate.rs  mod.rs  parse.rs  tls.rs  verify.rs
crates/ava-crypto/tests/: PORTING.md  golden_bls.rs  golden_encodings.rs  golden_nodeid.rs  golden_secp.rs  hashing.rs  local_signer.rs  proptests.rs
crates/ava-database/: BUILD.bazel  Cargo.toml  build.rs
crates/ava-database/docs/: migration.md
crates/ava-database/proptest-regressions/: .gitkeep
crates/ava-database/src/: batch.rs  corruptabledb.rs  dbtest.rs  error.rs  heightindex.rs  helpers.rs  lib.rs  linkeddb.rs  memdb.rs  meterdb.rs  prefixdb.rs  rocksdb.rs  traits.rs  versiondb.rs
crates/ava-database/src/migrate/: import.rs  leveldb.rs  mod.rs  pebble.rs  verify.rs
crates/ava-database/tests/: PORTING.md  conformance_corruptabledb.rs  conformance_heightindex.rs  conformance_memdb.rs  conformance_meterdb.rs  conformance_prefixdb.rs  conformance_rocksdb.rs  conformance_rpcdb.rs  conformance_versiondb.rs  go_dir_import.rs  golden_linkeddb.rs  golden_meterdb_metrics.rs  golden_prefix.rs  migrate.rs
crates/ava-engine/: BUILD.bazel  Cargo.toml
crates/ava-engine/src/: error.rs  lib.rs
crates/ava-engine/tests/: PORTING.md  bootstrap.rs  engine_adapter.rs  engine_flows.rs  failed_delivery.rs  handler.rs  outbound_sender.rs  prop_liveness.rs  prop_preference.rs  router.rs  timeout.rs
crates/ava-evm-reth/: BUILD.bazel  Cargo.toml  UPGRADING.md
crates/ava-evm-reth/src/: lib.rs
crates/ava-evm-reth/tests/: facade_pins.rs
xtask/: BUILD.bazel  Cargo.toml  determinism-allowlist.toml
xtask/src/: acceptance.rs  bench_guard.rs  check_sae_lints.rs  gen_flags.rs  gen_genesis.rs  lib.rs  lint_determinism.rs  main.rs  porting.rs  saevm_exit_gate.rs  test.rs  vectors.rs
xtask/tests/: lint_determinism.rs
(+1265 files in other folders)
