# avalanche-rs — Cargo workspace root.
#
# Bootstrapped in milestone M0 (see plan/M0-foundations.md, task M0.1). The
# `ava-*` crates land tier-by-tier in later milestones; `crates/*` is globbed so
# each new crate is picked up automatically.
#
# NOTE: deeper dev-env (Nix, Bazel, cargo-deny, CI, scripts/run_task.sh / xtask,
# the differential harness, and the extract-vectors maturation) is owned by
# plan/X-cross-cutting.md and is intentionally NOT defined here.

[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
license = "BSD-3-Clause"
authors = ["Ava Labs, Inc."]
repository = "https://github.com/ava-labs/avalanche-rs"

# Canonical external dependencies, pinned once here per specs/00 §4 and consumed
# by member crates via `dep = { workspace = true }`. Entries are only resolved
# when a member actually references them, so listing the full M0 set up front is
# free until the owning crate lands.
[workspace.dependencies]
# Errors / context
thiserror = "2"
anyhow = "1"

# Serialization (JSON / API; the linear codec is hand-written in ava-codec)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Encodings
hex = "0.4"
bs58 = "0.5"
bech32 = "0.11"

# Hashing
sha2 = "0.10"
sha3 = "0.10"
ripemd = "0.1"

# Cryptography
secp256k1 = { version = "0.31", features = ["recovery", "global-context"] }
blst = "0.3"

# Staking TLS / X.509 certs.
# Use the `ring` crypto backend (cc + perl) rather than the default `aws_lc_rs`
# (needs cmake/nasm) so the workspace builds with just a C toolchain. The Nix
# dev shell still ships cmake for the rocksdb/firewood crates (M1).
rcgen = { version = "0.13", default-features = false, features = ["pem", "crypto", "ring"] }
x509-parser = "0.16"
rustls-pemfile = "2"

# Key hygiene
zeroize = "1"

# Math / collections
num-bigint = "0.4"
parking_lot = "0.12"
arc-swap = "1"
indexmap = "2"
smallvec = "1"
bytes = "1"

# Time (formatting only; consensus time math stays integer/Duration-based)
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Proc-macro support (ava-codec-derive)
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

# Dev / test
proptest = "1"
rstest = "0.23"
assert_matches = "1.5"
pretty_assertions = "1"
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[profile.dev]
overflow-checks = true
debug-assertions = true

[profile.ci]
inherits = "dev"
overflow-checks = true
debug-assertions = true

[profile.release]
overflow-checks = false
lto = "thin"
codegen-units = 1
panic = "unwind"
