# avalanche-rs — Cargo workspace root.
#
# Bootstrapped in milestone M0 (see plan/M0-foundations.md, task M0.1). The
# `ava-*` crates land tier-by-tier in later milestones; `crates/*` is globbed so
# each new crate is picked up automatically.
#
# NOTE: deeper dev-env (Nix, Bazel, cargo-deny, CI, scripts/run_task.sh / xtask,
# the differential harness, and the extract-vectors maturation) is owned by
# plan/X-cross-cutting.md and is intentionally NOT defined here.

[workspace]
resolver = "3"
members = [ "crates/*", "xtask", "tests/differential" ]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
license = "BSD-3-Clause"
authors = [ "Ava Labs, Inc." ]
repository = "https://github.com/ava-labs/avalanche-rs"
# Internal workspace crates are not published to crates.io during the port.
# This also lets cargo-deny accept intra-workspace `path` deps under the strict
# `wildcards = "deny"` policy (allow-wildcard-paths applies to private crates).
# A crate intended as a released SDK can override with `publish = true`.
publish = false

# Canonical external dependencies, pinned once here per specs/00 §4 and consumed
# by member crates via `dep = { workspace = true }`. Entries are only resolved
# when a member actually references them, so listing the full M0 set up front is
# free until the owning crate lands.
[workspace.dependencies]
# Errors / context
thiserror = "2"
anyhow = "1"

# Serialization (JSON / API; the linear codec is hand-written in ava-codec)
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"

# Encodings
hex = "0.4"
bs58 = "0.5"
bech32 = "0.11"

# Compression (p2p message zstd packing; specs/05 §1.3, specs/15 §4.2). zstd is
# the only compression the port emits; flate2 is decode-only tolerance for legacy
# gzip peers (specs/05 §1.3) and is never used to compress.
zstd = "0.13"
flate2 = "1"

# Hashing
sha2 = "0.10"
sha3 = "0.10"
ripemd = "0.1"

# Cryptography
secp256k1 = { version = "0.31", features = [ "recovery", "global-context" ] }
blst = "0.3"

# Staking TLS / X.509 certs.
# Use the `ring` crypto backend (cc + perl) rather than the default `aws_lc_rs`
# (needs cmake/nasm) so the workspace builds with just a C toolchain. The Nix
# dev shell still ships cmake for the rocksdb/firewood crates (M1).
rcgen = { version = "0.13", default-features = false, features = [
  "pem",
  "crypto",
  "ring",
] }
x509-parser = "0.16"
rustls-pemfile = "2"

# TLS transport (specs/05 §4). TLS1.3-only, mutual auth, custom leaf-key
# verifiers (no CA chain). The `ring` crypto provider matches rcgen above
# (avoids aws-lc-rs's cmake/nasm build deps). `aws-lc-rs` default feature is
# disabled so CI builds with just a C toolchain.
rustls = { version = "0.23", default-features = false, features = [ "ring", "std", "tls12" ] }
tokio-rustls = { version = "0.26", default-features = false, features = [ "ring", "tls12" ] }
ring = "0.17"

# Async networking runtime support (specs/17). CancellationToken cancellation
# tree + TaskTracker graceful drain; async traits for the handler surfaces.
tokio-util = { version = "0.7", features = [ "rt" ] }
async-trait = "0.1"
# NAT traversal (specs/05 §6): UPnP IGD discovery + port mapping. UPnP-only;
# NAT-PMP/PCP probe falls through to NoRouter (matches Go's GetRouter order).
igd-next = "0.17.1"
futures = "0.3"

# Key hygiene
zeroize = "1"

# Metrics (Prometheus registry/collectors; specs/18). Go-parity metric names are
# emitted by ava-network (avalanche_network_*) and ava-vm (metervm averagers).
# default-features off: we only need the core registry, not the HTTP push gateway.
prometheus = { version = "0.13", default-features = false }

# Math / collections
num-bigint = "0.4"
# Fixed-width big integers for exact fee math (ACP-103 CalculatePrice U256 ops,
# specs/21 §0); first consumed by ava-platformvm M4.8.
ruint = "1"
parking_lot = "0.12"
arc-swap = "1"
indexmap = "2"
smallvec = "1"
bytes = "1"

# Protobuf / gRPC (proto3 services under `proto/`; specs/15 §2, §5). Codegen is
# done per-crate in `build.rs` via `tonic-build` into OUT_DIR and is NOT
# committed (specs/01 §8.1 / 00 decision 8). `tonic`/`prost` majors must stay in
# lockstep (tonic 0.12 depends on prost 0.13). `tokio` is the async runtime the
# sync `Database` trait blocks on at the call site (specs/04 §1.2). Proto `bytes`
# fields map to `bytes::Bytes` for zero-copy (specs/15 §5).
prost = "0.13"
tonic = "0.12"
tonic-build = "0.12"
tokio = { version = "1", features = [ "rt-multi-thread", "macros", "sync", "net", "time" ] }

# Time (formatting only; consensus time math stays integer/Duration-based)
chrono = { version = "0.4", default-features = false, features = [ "clock" ] }

# Tracing / observability (ava-logging; specs/18). The subscriber/OTel layers
# are wired in their owning milestones (X.18); the facade is pinned here.
tracing = "0.1"

# CLI
clap = { version = "4", features = [ "derive" ] }

# Proc-macro support (ava-codec-derive)
syn = { version = "2", features = [ "full" ] }
quote = "1"
proc-macro2 = "1"

# Dev / test
proptest = "1"
rstest = "0.23"
assert_matches = "1.5"
pretty_assertions = "1"
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = [ "derive" ] }

# Workspace-wide lints (specs/01 §7.3). Each crate opts in with `[lints]
# workspace = true`. unsafe_code is forbidden except in the audited FFI wrapper
# crates (ava-crypto's secp256k1/blst modules), which opt out per-crate (00 §7.6).
[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unused_crate_dependencies = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
# Project bans mirroring Go's forbidigo/depguard (specs/01 §7.5):
unwrap_used = "deny" # no unwrap() in non-test lib code (00 §8)
expect_used = "warn"
indexing_slicing = "warn"
arithmetic_side_effects = "warn" # nudge toward checked arithmetic (00 §6.1)
todo = "warn"
dbg_macro = "deny"

[profile.dev]
overflow-checks = true
debug-assertions = true

[profile.dev-checks] # build-race analogue: max runtime checking
inherits = "dev"
overflow-checks = true
debug-assertions = true

[profile.ci]
inherits = "dev"
overflow-checks = true
debug-assertions = true

[profile.release]
overflow-checks = false
lto = "thin"
codegen-units = 1
panic = "unwind"
