load("@rules_rust//rust:defs.bzl", "rust_binary")

rust_binary(
    name = "xtask",
    srcs = [
        "src/check_sae_lints.rs",
        "src/gen_flags.rs",
        "src/gen_genesis.rs",
        "src/lint_determinism.rs",
        "src/main.rs",
        "src/porting.rs",
        "src/saevm_exit_gate.rs",
        "src/test.rs",
        "src/vectors.rs",
    ],
    compile_data = ["Cargo.toml"],
    # xtask shells out to cargo (Command::new(env!("CARGO"))). Cargo defines
    # CARGO at compile time; Bazel does not. xtask is a dev-loop tool run via
    # `cargo xtask`, not under Bazel — building it here only needs to compile,
    # so fall back to `cargo` on PATH.
    rustc_env = {"CARGO": "cargo"},
    visibility = ["//visibility:public"],
    deps = [
        "@crates//:anyhow",
        "@crates//:clap",
    ],
)
