load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")

rust_binary(
    name = "xtask",
    srcs = [
        "src/acceptance.rs",
        "src/bench_guard.rs",
        "src/check_sae_lints.rs",
        "src/gen_flags.rs",
        "src/gen_genesis.rs",
        "src/main.rs",
        "src/porting.rs",
        "src/saevm_exit_gate.rs",
        "src/test.rs",
        "src/vectors.rs",
    ],
    compile_data = ["Cargo.toml"],
    # xtask shells out to cargo (Command::new(env!("CARGO"))). Cargo defines
    # CARGO at compile time; Bazel does not. xtask is a dev-loop tool run via
    # `cargo xtask`, not under Bazel — building it here only needs to compile,
    # so fall back to `cargo` on PATH.
    rustc_env = {"CARGO": "cargo"},
    visibility = ["//visibility:public"],
    deps = [
        ":xtask_lib",
        "@crates//:anyhow",
        "@crates//:clap",
        "@crates//:proc-macro2",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:sha2",
        "@crates//:syn",
        "@crates//:toml",
        "@crates//:walkdir",
    ],
)

rust_library(
    name = "xtask_lib",
    srcs = [
        "src/lib.rs",
        "src/lint_determinism.rs",
    ],
    compile_data = ["Cargo.toml"],
    crate_name = "xtask",
    visibility = ["//visibility:public"],
    deps = [
        "@crates//:anyhow",
        "@crates//:clap",
        "@crates//:proc-macro2",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:sha2",
        "@crates//:syn",
        "@crates//:toml",
        "@crates//:walkdir",
    ],
)

rust_test(
    name = "lint_determinism",
    srcs = ["tests/lint_determinism.rs"],
    compile_data = ["Cargo.toml"],
    visibility = ["//visibility:public"],
    deps = [
        ":xtask_lib",
        "@crates//:anyhow",
        "@crates//:clap",
        "@crates//:proc-macro2",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:sha2",
        "@crates//:syn",
        "@crates//:toml",
        "@crates//:walkdir",
    ],
)

rust_test(
    name = "xtask_test",
    compile_data = ["Cargo.toml"],
    crate = ":xtask",
)
