[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Repo automation task runner mirroring Taskfile.yml (specs/01 §5, tier X / X.4)."
publish = false

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
# `syn` needs the `visit` + `extra-traits` features for the determinism AST pass;
# the workspace pin only enables `full`, so this crate declares its own feature
# set (same major version, resolved to the workspace `syn` in `Cargo.lock`).
syn = { version = "2", features = [ "full", "visit", "extra-traits" ] }
# `span-locations` exposes line/column on spans (it is off by default and only
# valid outside a proc-macro, which is exactly this offline AST pass).
proc-macro2 = { version = "1", features = [ "span-locations" ] }
toml = "1"
walkdir = "2"
serde_json = { workspace = true }
sha2 = { workspace = true }

[lints]
workspace = true
