# ava-api-macros — the `#[rpc_service("name")]` attribute macro backing the
# gorilla-json2 JSON-RPC shim in ava-api (M8.17 / specs 12 §3.2, 14 §1.1).
#
# This crate exists solely so the registered JSON-RPC method set cannot drift
# from the service trait: the macro reads each `pub async fn(&self, Args) ->
# Result<Reply, RpcError>` on the annotated impl block and emits a
# `register_rpc(self: Arc<Self>, registry: &mut ServiceRegistry)` that registers
# every method under `<name>.<MethodName>` (gorilla `Service.Method`).

[package]
name = "ava-api-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "Attribute macro #[rpc_service(\"name\")] generating gorilla-json2 JSON-RPC method registration for ava-api (M8.17 / specs 12 §3.2, 14 §1.1)."

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }

[lints]
workspace = true
