load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "ava_api",
    srcs = [
        "src/admin/mod.rs",
        "src/admin/profiler.rs",
        "src/admin/types.rs",
        "src/error.rs",
        "src/header_route.rs",
        "src/health/handler.rs",
        "src/health/mod.rs",
        "src/health/types.rs",
        "src/info/mod.rs",
        "src/info/types.rs",
        "src/jsonrpc.rs",
        "src/lib.rs",
        "src/metrics/mod.rs",
        "src/middleware.rs",
        "src/register.rs",
        "src/server.rs",
    ],
    compile_data = ["Cargo.toml"],
    proc_macro_deps = [
        "//crates/ava-api-macros:ava_api_macros",
        "@crates//:async-trait",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//crates/ava-config:ava_config",
        "//crates/ava-database:ava_database",
        "//crates/ava-logging:ava_logging",
        "//crates/ava-snow:ava_snow",
        "//crates/ava-types:ava_types",
        "//crates/ava-version:ava_version",
        "//crates/ava-vm:ava_vm",
        "@crates//:axum",
        "@crates//:chrono",
        "@crates//:futures",
        "@crates//:hex",
        "@crates//:hyper-util",
        "@crates//:parking_lot",
        "@crates//:pprof",
        "@crates//:prometheus",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:thiserror",
        "@crates//:tokio",
        "@crates//:tokio-util",
        "@crates//:tower",
        "@crates//:tower-http",
        "@crates//:tracing",
    ],
)

rust_test(
    name = "differential_api_parity",
    srcs = ["tests/differential_api_parity.rs"],
    compile_data = [
        "Cargo.toml",
        "tests/vectors/api/api_parity.json",
    ],
    proc_macro_deps = ["@crates//:async-trait"],
    visibility = ["//visibility:public"],
    deps = [
        ":ava_api",
        "//crates/ava-database:ava_database",
        "//crates/ava-logging:ava_logging",
        "//crates/ava-snow:ava_snow",
        "//crates/ava-types:ava_types",
        "//crates/ava-version:ava_version",
        "@crates//:axum",
        "@crates//:chrono",
        "@crates//:futures",
        "@crates//:parking_lot",
        "@crates//:pretty_assertions",
        "@crates//:prometheus",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:tokio",
        "@crates//:tower",
    ],
)

rust_test(
    name = "golden_metrics_names",
    srcs = ["tests/golden_metrics_names.rs"],
    compile_data = ["Cargo.toml"],
    visibility = ["//visibility:public"],
    deps = [
        ":ava_api",
        "@crates//:prometheus",
        "@crates//:serde",
        "@crates//:serde_json",
    ],
)

rust_test(
    name = "ava_api_test",
    compile_data = ["Cargo.toml"],
    crate = ":ava_api",
    proc_macro_deps = [
        "//crates/ava-api-macros:ava_api_macros",
        "@crates//:async-trait",
    ],
    deps = [
        "//crates/ava-config:ava_config",
        "//crates/ava-types:ava_types",
        "//crates/ava-version:ava_version",
        "@crates//:assert_matches",
        "@crates//:chrono",
        "@crates//:futures",
        "@crates//:parking_lot",
        "@crates//:pretty_assertions",
        "@crates//:prometheus",
        "@crates//:serde_json",
        "@crates//:tempfile",
        "@crates//:tokio",
        "@crates//:tower",
    ],
)
