# ava-api — node HTTP server, JSON-RPC 2.0 shim, and built-in APIs
# (M8 / specs 12 §3, 14 §1/§16).
#
# Dependency direction: ava-api -> { ava-config (HttpConfig), ava-snow
# (ConsensusContext / EngineState), ava-vm (Vm trait + HttpHandler), ava-types
# (NodeId) }. This task (M8.16) implements only the transport layer: the axum
# router under /ext with h2c, CORS, allowed-hosts, node-id header, per-chain
# not-bootstrapped 503, and the HTTPConfig timeout layers, plus the `ApiServer`
# trait. The JSON-RPC shim / service registry land in M8.17, chain mounting in
# M8.22.

[package]
name = "ava-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "Node HTTP server + middleware: axum/h2c/CORS/allowed-hosts/node-id/per-chain-503 and the ApiServer trait (M8 / specs 12 §3.1, 14 §1.3/§16.3)."

[dependencies]
ava-config = { path = "../ava-config" }
ava-snow = { path = "../ava-snow" }
ava-types = { path = "../ava-types" }
ava-vm = { path = "../ava-vm" }
async-trait = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
# HTTP stack (specs 12 §3.1). Pinned per-crate (ava-api is the first consumer of
# the axum/tower-http surface). axum 0.7 sits on hyper 1.x / http 1.x / tower
# 0.5, matching the tonic 0.12 line already in the workspace lock. h2c (HTTP/2
# cleartext) is served via axum's hyper-util auto connection builder.
axum = { version = "0.7", features = [ "http2" ] }
tower-http = { version = "0.6", features = [ "cors", "timeout" ] }

[dev-dependencies]
# `testutil` exposes `ava_vm::testutil::TestVm` for the register_chain test.
ava-vm = { path = "../ava-vm", features = [ "testutil" ] }
ava-version = { path = "../ava-version" }
pretty_assertions = "1"
tokio = { workspace = true, features = [ "rt-multi-thread", "macros", "sync", "net", "time" ] }
tower = { version = "0.5", features = [ "util" ] }

[lints]
workspace = true
