[package]
name = "ava-archivedb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "Height-versioned key/value store with byte-exact ^height encoding (port of x/archivedb) (M1 / specs 04 §5.2)."

[dependencies]
thiserror = { workspace = true }
ava-database = { path = "../ava-database" }

[dev-dependencies]
ava-database = { path = "../ava-database", features = ["testutil"] }
assert_matches = { workspace = true }
pretty_assertions = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
